File names changed, left column stuck fixed

--- a/style.css
+++ b/style.css
@@ -5,12 +5,22 @@
 .main-text-characteristics {
   font-family: Arial, Helvetica, sans-serif;
   display: inline-grid;
-  grid-template-rows: repeat(10); 
   grid-template-columns: 1fr 3fr;
   background-color: #86A3B4;
-  border: 0px solid black;
+  position: relative;
 }
 
+.white {
+  background-color: #FFFFFF;
+  border-left: 1px solid black;
+  position: relative;
+  grid-column-start: 2;
+}
+.blue{
+  position: fixed;
+}
+
+/*
 .left-section {
   display: inline-grid;
   grid-template-rows: repeat(10 1fr);
@@ -22,6 +32,7 @@
   border-left: 1px solid black;
   grid-template-rows: minmax(100px, auto);
 }
+*/
 
 .name{
   font-weight: 600;
@@ -161,6 +172,7 @@ ul{
   margin-left: 55px;
   margin-right: 40px;
   font-size: 16px;
+  margin-bottom: 50px;
 }
 
 .we-header{
@@ -170,9 +182,8 @@ ul{
 .form-container {
   max-width: 1024px;
   max-height: 100vh;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 10%;
+  position: absolute;
+  left: calc(50%-200px);
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -266,4 +277,8 @@ select{
   background: url('./assets/Vector.png') no-repeat right;
   min-width: 10rem;
   line-height: 1.5em;
+}
+
+.extra {
+  color: #005;
 }
